--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,22 @@
-name: Template-Plugin-NakedBody
-version: 0.02
-abstract: Strip HTML wrapping to get just the naked body
-author: Adam Kennedy <cpan@ali.as>
-license: perl
-distribution_type: module
+---
+abstract: 'Strip HTML to just keep the body content'
+author:
+  - 'Adam Kennedy <adamk@cpan.org>'
 build_requires:
   Test::More: 0.47
-  File::Spec: 0.82
-requires:
-  perl: 5.005
-  Template: 2.10
+distribution_type: module
+generated_by: 'Module::Install version 0.75'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
+module_name: Template::Plugin::NakedBody
+name: Template-Plugin-NakedBody
 no_index:
   directory:
     - inc
-generated_by: Module::Install version 0.36
+    - t
+requires:
+  Template: 2.10
+  perl: 5.005
+version: 1.03
